# Sebas-Birthday-Gift

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  JobScraper.py  README.md  config.toml  database.py  nixpacks.toml  pyproject.toml  requirements.txt  server.py  start.sh
docs/superpowers/specs/: 2026-03-23-fastapi-consolidation-design.md
frontend/: index.html  vite.config.js
frontend/src/: Dashboard.jsx  Login.jsx  index.css  main.jsx
src/jobscraper/: __init__.py  cli.py  config.py  db.py  export.py  filters.py  log.py  models.py  parser.py  scraper.py  server.py
tests/: test_db.py  test_filters.py  test_parser.py  test_security.py  test_server.py
