[project]
name = "jobscraper"
version = "2.0.0"
description = "Scrapes jobs.ch for Detailhandel-EFZ positions and generates interactive HTML reports"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.28",
    "beautifulsoup4>=4.14",
    "lxml>=6.0",
    "pydantic>=2.7",
    "typer>=0.12",
    "rich>=13.7",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "jinja2>=3.1",
    "loguru>=0.7",
    "tenacity>=8.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
]

[project.scripts]
jobscraper     = "jobscraper.cli:app"
jobscraper-web = "jobscraper.server:start"

[build-system]
requires      = ["setuptools>=70"]
build-backend = "setuptools.backends.legacy:build"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths    = ["tests"]
