[project]
name = "jobscraper"
version = "2.0.0"
description = "Scrapes jobs.ch and serves results via a FastAPI web app"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "aiosqlite>=0.20",
    "httpx>=0.28",
    "beautifulsoup4>=4.14",
    "lxml>=6.0",
    "pydantic>=2.7",
    "python-jose[cryptography]>=3.3",
    "passlib[bcrypt]>=1.7",
    "python-dotenv>=1.0",
    "loguru>=0.7",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
    "bcrypt>=4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "httpx>=0.28",
]

[project.scripts]
jobscraper-web = "jobscraper.server:start"

[build-system]
requires      = ["setuptools>=70"]
build-backend = "setuptools.backends.legacy:build"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths    = ["tests"]
